--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,3 +1,11 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* width: 100vw; */
+  /* align-items: stretch; */
+  /* justify-content: center; */
+  /* justify-content: space-between; */
+  /* justify-content: stretch; */
 }
