--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     height: fit-content;
+    width: 100%;
     padding-left: 1rem;
     padding-right: 1rem;
     background-color: #80808080;
