--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,15 @@ code {
     monospace;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #111;
