--- a/client/src/styles/Auth.css
+++ b/client/src/styles/Auth.css
@@ -1,4 +1,4 @@
-.Login {
+.Auth {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -6,7 +6,7 @@
     padding: 4rem;
 }
 
-.Login button {
+.Auth .submit {
     padding: 1rem;
     margin-top: 16px;
     margin-bottom: 8px;
