--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -4,3 +4,19 @@
   flex-direction: column;
   align-items: center;
 }
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: minmax(200px, auto);
+}
+
+.grid div:first-child {
+  grid-column: 1;
+  grid-row: 1 / 3;
+}
+
+.grid div:last-child {
+  grid-column: 2;
+  grid-row: 2;
+}
