--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -8,7 +8,9 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: minmax(200px, auto);
+  height: 500px;
+  width: 100%;
+  grid-template-rows: 50% 50%;
 }
 
 .grid div:first-child {
@@ -16,7 +18,7 @@
   grid-row: 1 / 3;
 }
 
-.grid div:last-child {
+.grid .div:last-child {
   grid-column: 2;
   grid-row: 2;
 }
