--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -1,15 +1,16 @@
 .Card {
-    display: flex;
-    flex-direction: column;
+    width: 50vw;
 }
 
 .Card button {
-    flex-grow: 1;
+    height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .Card img {
-    flex-grow: 1;
+    flex: 1 1 auto;
     object-fit: cover;
+    max-height: calc(100% - 90px);
 }
