--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
 }
 
 .grid {
@@ -21,4 +22,25 @@
 .grid .div:last-child {
   grid-column: 2;
   grid-row: 2;
+}
+
+.Header {
+  display: flex;
+  flex-direction: row;
+  height: fit-content;
+  width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  background-color: #80808080;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.Header div {
+  flex-grow: 1;
+  text-align: left;
+}
+
+.Header div a:hover {
+  text-decoration: none;
 }
