--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -2,11 +2,12 @@
     width: 50vw;
 }
 
-.Card button {
+.Card a {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-decoration: none;
 }
 
 .Card img {
