--- a/client/src/styles/Form.css
+++ b/client/src/styles/Form.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 600px;
-    padding: 4rem;
+    /* max-width: 600px;
+    padding: 4rem; */
 }
 
 .Form .submit {
