--- a/client/src/styles/Form.css
+++ b/client/src/styles/Form.css
@@ -2,11 +2,9 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    /* max-width: 600px;
-    padding: 4rem; */
 }
 
-.Form .submit {
+.submit {
     padding: 1rem;
     margin-top: 16px;
     margin-bottom: 8px;
